--- a/src/main/resources/templates/newspot.html
+++ b/src/main/resources/templates/newspot.html
@@ -22,12 +22,53 @@
         <p>Spot Name:           <input type="text" name="name"/></p>
         <p>Spot Description:    <input type="text" name="description"/></p>
 
+
         <div class="form-group">
             <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
         </div>
-        <p><input type="submit" value="Submit"/></p>
+        <p><input type="submit" value="Save"/></p>
+        <a href="/newspot" th:href="@{/spotDetails}"/></a>
+    </div>
+
+  <!--  <div class="text-center">
+        <p>Add a new Secteur!</p>
+        <p>Secteur Name:            <input type="text" name="name"/> </p>
+        <p>Secteur Description:     <input type="text" name="description"/></p>
+
+
+        <div class="form-group">
+            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+        </div>
+        <p><input type="submit" value="Save"/></p>
+    </div>
+
+    <div class="text-center">
+        <p>Add a new Voie!</p>
+        <p>Voie Name:            <input type="text" name="name"/> </p>
+        <p>Voie Description:     <input type="text" name="description"/></p>
+
+
+        <div class="form-group">
+            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+        </div>
+        <p><input type="submit" value="Save"/></p>
+    </div>
+
+    <div class="text-center">
+        <p>Add a new Longueur!</p>
+        <p>Longueur Name:            <input type="text" name="name"/> </p>
+        <p>Longueur Description:     <input type="text" name="description"/></p>
+
+
+        <div class="form-group">
+            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+        </div>
+        <p><input type="submit" value="Save"/></p>
+    </div> -->
+
     </div>
 </form>
+
 <div class="text-center">Already have an account? <a href="#">Log In</a></div>
 </body>
 </html>
