--- a/src/main/resources/templates/topo.html
+++ b/src/main/resources/templates/topo.html
@@ -22,6 +22,7 @@
         <p>Topo Title:           <input type="text" name="title"/></p>
         <p>Topo Author:    <input type="text" name="Author"/></p>
         <p>Topo Date of publishing</p> <input> type= "text" name="Date of publishing"/></p>
+        <p>Topo Availability <input> type= "text" name="Availability"/></p>
         <div class="form-group">
             <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
         </div>
