--- a/src/main/resources/templates/homeNotSignedIn.html
+++ b/src/main/resources/templates/homeNotSignedIn.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    ...
+    <link rel="stylesheet" href="../static/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/navbar.css">
 </head>
 <body>
-...
+
 <!--<div th:replace="fragments/header :: header"> ========================= -->
     <!-- This content is only used for static prototyping purposes (natural templates)-->
     <!-- and is therefore entirely optional, as this markup fragment will be included -->
@@ -13,11 +14,18 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Static header</a>
+                <a class="navbar-brand" href="#">CMFC</a>
+
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
+                    <li class="active"><a href="#">Spots</a> </li>
+                    <li class="active"><a href="#">Climbing Areas</a></li>
+                    <li class="active"><a href="#">Routes</a> </li>
+                    <li class="active"><a href="#">Lengths</a> </li>
+                    <li class="active"><a href="#">Sign In</a> </li>
+                    <li class="active"><a href="#">Log In</a> </li>
                 </ul>
             </div>
         </div>
@@ -27,16 +35,17 @@
     <div class="hero-unit">
         <h1>Test</h1>
         <p>
-            Welcome to the Spring MVC Quickstart application!
+            Welcome to the Climbing Friends' Community!
             Get started quickly by signing up.
         </p>
         <p>
-            <a href="/signup" th:href="@{/signup-form}" class="btn btn-large btn-success">Sign up</a>
+            <a href="/signup" th:href="@{/signup-form}" class="btn btn-large btn-success">Sign Up</a>
+            <!--<a href="/logIn" th:href="@{/logIn}" class="btn btn-large btn-success">Log In</a> -->
         </p>
     </div>
     <!--<div th:replace="fragments/footer :: footer">&copy; 2016 The Static Templates</div> -->
 </div>
-...
+
 </body>
 </html>
 
