mise en place httpsession

--- a/src/main/resources/templates/homeNotSignedIn.html
+++ b/src/main/resources/templates/homeNotSignedIn.html
@@ -24,8 +24,6 @@
                     <li class="active"><a href="#">Climbing Areas</a></li>
                     <li class="active"><a href="#">Routes</a> </li>
                     <li class="active"><a href="#">Lengths</a> </li>
-                    <li class="active"><a href="#">Sign In</a> </li>
-                    <li class="active"><a href="#">Log In</a> </li>
                 </ul>
             </div>
         </div>
@@ -40,7 +38,7 @@
         </p>
         <p>
             <a href="/signup" th:href="@{/signup-form}" class="btn btn-large btn-success">Sign Up</a>
-            <!--<a href="/logIn" th:href="@{/logIn}" class="btn btn-large btn-success">Log In</a> -->
+            <a href="/login" th:href="@{/login}" class="btn btn-large btn-success">Log In</a>
         </p>
     </div>
     <!--<div th:replace="fragments/footer :: footer">&copy; 2016 The Static Templates</div> -->
