--- a/src/main/resources/templates/topo.html
+++ b/src/main/resources/templates/topo.html
@@ -21,8 +21,8 @@
         <p>Add a new Topo!</p>
         <p>Topo Title:           <input type="text" name="title"/></p>
         <p>Topo Author:    <input type="text" name="author"/></p>
-        <p>Topo Date Of Publishing:    <input type="date" name="date of publishing"/></p>
-        <p>Topo Availability: <input type="text" name="availability"></p>
+        <p>Topo Date Of Publishing:    <input type="date" name="dateOfPublishing"/></p>
+
         <div class="form-group">
             <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
         </div>
