--- a/src/main/resources/templates/homeNotSignedIn.html
+++ b/src/main/resources/templates/homeNotSignedIn.html
@@ -3,10 +3,23 @@
 <head>
     <link rel="stylesheet" href="../static/bootstrap.min.css">
     <link rel="stylesheet" href="../static/navbar.css">
+
+
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
+    <title>Bootstrap Simple Registration Form</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
+    <style>
+
+    </style>
 </head>
 <body>
 
-<!--<div th:replace="fragments/header :: header"> ========================= -->
+   <!--<div th:replace="fragments/header :: header"> ========================= -->
     <!-- This content is only used for static prototyping purposes (natural templates)-->
     <!-- and is therefore entirely optional, as this markup fragment will be included -->
     <!-- from "fragments/header.html" at runtime.                                     -->
@@ -14,24 +27,23 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">CMFC</a>
+                <a class="navbar-brand" href="#">Climbing Friends' Community</a>
 
-            </div>
+
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li class="active"><a href="#">Spots</a> </li>
-                    <li class="active"><a href="#">Climbing Areas</a></li>
+                    <li ><a href="/spot/spotList" th:href="@{/spot/spotList}" class="btn btn-large btn-success">Spot List</a></li>
+                    <li ><a href="/topoList" th:href="@{/topoList}" class="btn btn-large btn-success"> Topo List</a></li>
                     <li class="active"><a href="#">Routes</a> </li>
                     <li class="active"><a href="#">Lengths</a> </li>
                 </ul>
             </div>
+            </div>
         </div>
     </div>
-</div>
-<div class="container">
+
+<!--<div class="container">
     <div class="hero-unit">
-        <h1>Test</h1>
         <p>
             Welcome to the Climbing Friends' Community!
             Get started quickly by signing up.
@@ -39,10 +51,13 @@
         <p>
             <a href="/signup" th:href="@{/signup-form}" class="btn btn-large btn-success">Sign Up</a>
             <a href="/login" th:href="@{/login}" class="btn btn-large btn-success">Log In</a>
+        <li ><a href="/spot/spotList" th:href="@{/spot/spotList}" class="btn btn-large btn-success">Spot List</a></li>
+        <li ><a href="/topoList" th:href="@{/topoList}" class="btn btn-large btn-success"> Topo List</a></li>
+        <li class="active"><a href="#">Routes</a> </li>
+        <li class="active"><a href="#">Lengths</a> </li>
         </p>
-    </div>
-    <!--<div th:replace="fragments/footer :: footer">&copy; 2016 The Static Templates</div> -->
-</div>
+    </div> -->
+  <!--  <div th:replace="fragments/footer :: footer">&copy; 2016 The Static Templates</div> -->
 
 </body>
 </html>
