--- a/src/main/resources/templates/topo.html
+++ b/src/main/resources/templates/topo.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
+   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
     <title>Bootstrap Simple Registration Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,7 +11,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <style>
 
-    </style>
+    </style> -->
     <title>New Topo</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
     <div class="text-center">
         <p>Add a new Topo!</p>
         <p>Topo Title:           <input type="text" name="title"/></p>
-        <p>Topo Author:    <input type="text" name="author"/></p>
+        <p>Topo Author:         <input type="text" name="author"></p>
         <p>Topo Date Of Publishing:    <input type="date" name="dateOfPublishing"/></p>
 
         <div class="form-group">
