--- a/src/main/resources/templates/homeNotSignedIn.html
+++ b/src/main/resources/templates/homeNotSignedIn.html
@@ -6,13 +6,13 @@
 
 
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
     <title>Bootstrap Simple Registration Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <style>
 
     </style>
@@ -29,7 +29,6 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">Climbing Friends' Community</a>
 
-
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li ><a href="/spot/spotList" th:href="@{/spot/spotList}" class="btn btn-large btn-success">Spot List</a></li>
@@ -42,7 +41,7 @@
         </div>
     </div>
 
-<!--<div class="container">
+<div class="container">
     <div class="hero-unit">
         <p>
             Welcome to the Climbing Friends' Community!
@@ -52,13 +51,18 @@
             <a href="/signup" th:href="@{/signup-form}" class="btn btn-large btn-success">Sign Up</a>
             <a href="/login" th:href="@{/login}" class="btn btn-large btn-success">Log In</a>
         <li ><a href="/spot/spotList" th:href="@{/spot/spotList}" class="btn btn-large btn-success">Spot List</a></li>
+        <br>
         <li ><a href="/topoList" th:href="@{/topoList}" class="btn btn-large btn-success"> Topo List</a></li>
-        <li class="active"><a href="#">Routes</a> </li>
-        <li class="active"><a href="#">Lengths</a> </li>
+        <br>
+        <li ><a href="/voieList" th:href="@{/voieList}" class="btn btn-large btn-success"> Voie List</a> </li>
+        <br>
+        <li><a href="/longueurList" th:href="@{/longueurList}" class="btn btn-large btn-success">Longeur List</a> </li>
+        <!--<li class="active"><a href="#">Routes</a> </li>
+        <li class="active"><a href="#">Lengths</a> </li> -->
         </p>
-    </div> -->
+    </div>
   <!--  <div th:replace="fragments/footer :: footer">&copy; 2016 The Static Templates</div> -->
-
+</div>
 </body>
 </html>
 
