Mise en place du log out et encryptage du password

--- a/src/main/resources/templates/homeNotSignedIn.html
+++ b/src/main/resources/templates/homeNotSignedIn.html
@@ -50,7 +50,10 @@
         <p>
             <a href="/signup" th:href="@{/signup-form}" class="btn btn-large btn-success">Sign Up</a>
             <a href="/login" th:href="@{/login}" class="btn btn-large btn-success">Log In</a>
+
         <li ><a href="/spot/spotList" th:href="@{/spot/spotList}" class="btn btn-large btn-success">Spot List</a></li>
+        <br>
+        <li><a href="secteurList" th:href="@{/secteurList}" class="btn btn-large btn-success">SecteurList</a> </li>
         <br>
         <li ><a href="/topoList" th:href="@{/topoList}" class="btn btn-large btn-success"> Topo List</a></li>
         <br>
