--- a/src/main/resources/templates/spot/newspot.html
+++ b/src/main/resources/templates/spot/newspot.html
@@ -15,6 +15,7 @@
     <title>New Spot</title>
 </head>
 <body>
+<div th:replace="fragments/menu :: header"></div>
 <form action="#" th:action="@{/newspot}" th:object="${Spot}"
       method="POST">
     <div class="text-center">
@@ -28,5 +29,8 @@
 
 <div class="text-center">Already have an account? <a href="#">Log In</a>
 </div>
+<footer th:fragment="footer">
+    C'est mon pied!
+</footer>
 </body>
 </html>
