--- a/src/main/resources/templates/homeNotSignedIn.html
+++ b/src/main/resources/templates/homeNotSignedIn.html
@@ -18,13 +18,14 @@
     </style>
 </head>
 <body>
-
+<div th:replace="fragments/menu :: header"></div>
    <!--<div th:replace="fragments/header :: header"> ========================= -->
     <!-- This content is only used for static prototyping purposes (natural templates)-->
     <!-- and is therefore entirely optional, as this markup fragment will be included -->
     <!-- from "fragments/header.html" at runtime.                                     -->
     <!-- ============================================================================ -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
+
+    <!--<div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">Climbing Friends' Community</a>
@@ -39,8 +40,10 @@
             </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
+
+<div class="homeNotSignedIn" th:fragment="homeNotSignedIn"></div>
 <div class="container">
     <div class="hero-unit">
         <p>
@@ -48,7 +51,7 @@
             Get started quickly by signing up.
         </p>
         <p>
-            <a href="/signup" th:href="@{/signup-form}" class="btn btn-large btn-success">Sign Up</a>
+            <a th:href="@{/signup}" class="btn btn-large btn-success">Sign Up</a>
             <a href="/login" th:href="@{/login}" class="btn btn-large btn-success">Log In</a>
 
         <li ><a href="/spot/spotList" th:href="@{/spot/spotList}" class="btn btn-large btn-success">Spot List</a></li>
@@ -64,8 +67,12 @@
         <li class="active"><a href="#">Lengths</a> </li> -->
         </p>
     </div>
+</div>
   <!--  <div th:replace="fragments/footer :: footer">&copy; 2016 The Static Templates</div> -->
 </div>
+<footer th:fragment="footer">
+    C'est mon pied!
+</footer>
 </body>
 </html>
 
