--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Welcome Climbing Friend!</title>
 </head>
 <body>
+<div th:replace="fragments/menu :: header"></div>
 <br>
 <div>align="center">
 <h1>Welcome Climbing Friends!</h1>
@@ -14,5 +15,8 @@
     <a href="#" >View All Users</a> -->
 
 </div>
+<footer th:fragment="footer">
+    C'est mon pied!
+</footer>
 </body>
 </html>
