--- a/src/main/resources/templates/signup-form.html
+++ b/src/main/resources/templates/signup-form.html
@@ -15,6 +15,7 @@
     <title>Sign Up Form</title>
 </head>
 <body>
+<div th:replace="fragments/menu :: header"></div>
 <form action="#" th:action="@{/signup-submit}" th:object="${User}"
       method="POST">
     <div class="text-center">
@@ -32,5 +33,8 @@
 </form>
 <div class="text-center">Already have an account? <a href="#">Log In</a></div>
 </div>
+<footer th:fragment="footer">
+    C'est mon pied!
+</footer>
 </body>
 </html>
