--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Welcome Climbing Friend!</title>
-</head>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
+<link rel="stylesheet" href="../../static/css/style.css" th:href="@{/css/style.css}"/>
+
+<title>Home</title>
 <body>
 <div th:replace="fragments/menu :: header"></div>
-<br>
-<div>align="center">
-<h1>Welcome Climbing Friends!</h1>
-<!--<a href="/list_user">Click here to list all users</a>-->
-  <!--<a th:href="@{/login}">Log In>></a>
-    <br>
-    <a href="#" >View All Users</a> -->
-
-</div>
-<footer th:fragment="footer">
-    C'est mon pied!
+<main>
+    <h2>Welcome Climbing Friends!</h2>
+</main>
+<footer>
+    <div>
+        Contact: e.balsen@hotmail.com
+    </div>
 </footer>
 </body>
 </html>
