--- a/src/main/resources/templates/signup-form.html
+++ b/src/main/resources/templates/signup-form.html
@@ -1,40 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-    <title>Bootstrap Simple Registration Form</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <style>
+<html xmlns:th="http://www.thymeleaf.org"
+      th:replace="fragments/base :: base(~{::title},~{::h2},~{::section})">
+<div th:replace="fragments/base :: head"></div>
+<title>Sign Up Form</title>
 
-</style> -->
-    <title>Sign Up Form</title>
-</head>
 <body>
 <div th:replace="fragments/menu :: header"></div>
-<form action="#" th:action="@{/signup-submit}" th:object="${User}"
-      method="POST">
-    <div class="text-center">
-    <p>Sign Up Now!</p>
-    <p>And Join Climbing Friends' Community!</p>
-    <p>Name     <input type="text" name="name"/></p>
-    <p>Email    <input type="email" name="email"/></p>
-    <p>Pseudo   <input type="text" name="pseudo"/></p>
-    <p>Password <input type="password" name="password"/></p>
-    <div class="form-group">
-        <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+<br>
+<h2>Sign Up</h2>
+
+<section>
+    <form action="#" th:action="@{/signup-submit}" th:object="${User}"
+          method="POST">
+        <div class="text-center">
+            <p>Sign Up Now!</p>
+            <p>And Join Climbing Friends' Community!</p>
+            <p>Name <input type="text" name="name"/></p>
+            <p>Email <input type="email" name="email"/></p>
+            <p th:if="${message != null}" th:text="${message}" class="redMessage"></p>
+            <p>Pseudo <input type="text" name="pseudo"/></p>
+            <p>Password <input type="password" name="password"/></p>
+            <div class="form-group">
+                <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms
+                    of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+            </div>
+            <p><input type="submit" value="Submit"/></p>
+        </div>
+    </form>
+    <div class="text-center">Already have an account? <a href="#">Log In</a></div>
     </div>
-    <p><input type="submit" value="Submit"/></p>
-    </div>
-</form>
-<div class="text-center">Already have an account? <a href="#">Log In</a></div>
-</div>
-<footer th:fragment="footer">
-    C'est mon pied!
-</footer>
+</section>
 </body>
 </html>
