--- a/src/main/resources/templates/signup-success.html
+++ b/src/main/resources/templates/signup-success.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Signup Success</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+th:replace="fragments/base :: base(~{::title},~{::h2},~{::section})">
+<div th:replace="fragments/base :: head"></div>
+<title>Signup Success</title>
+
 <body>
 <div th:replace="fragments/menu :: header"></div>
+<br>
+<h2>Signup Success</h2>
+
+<section>
     <p>Your Sign Up request success. Please check your email.</p>
     <p th:text="${user.email}"></p>
-<footer th:fragment="footer">
-    C'est mon pied!
-</footer>
+</section>
 </body>
 </html>
