--- a/src/main/resources/templates/spot/newspot.html
+++ b/src/main/resources/templates/spot/newspot.html
@@ -1,36 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-    <title>Bootstrap Simple Registration Form</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <style>
-
-    </style> -->
-    <title>New Spot</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      th:replace="fragments/base :: base(~{::title},~{::h2},~{::section})">
+<div th:replace="fragments/base :: head"></div>
+<title>NewSpot</title>
 <body>
 <div th:replace="fragments/menu :: header"></div>
-<form action="#" th:action="@{/newspot}" th:object="${Spot}"
-      method="POST">
-    <div class="text-center">
-        <p>Add a new Spot!</p>
-        <p>Spot Name:           <input type="text" name="name"/></p>
-        <p>Spot Description:    <input type="text" name="description"/></p>
-        <p><input type="submit" value="Save"/></p>
+<h2>NewSpot</h2>
+<section>
+    <form action="#" th:action="@{/newspot}" th:object="${Spot}"
+          method="POST">
+        <div class="text-center">
+            <p>Add a new Spot!</p>
+            <p>Spot Name: <input type="text" name="name"/></p>
+            <p>Spot Description: <input type="text" name="description"/></p>
+            <p><input type="submit" value="Save"/></p>
 
-    </div>
-</form>
-
-<div class="text-center">Already have an account? <a href="#">Log In</a>
-</div>
-<footer th:fragment="footer">
-    C'est mon pied!
-</footer>
+        </div>
+    </form>
+</section>
 </body>
 </html>
