--- a/src/main/resources/templates/topo.html
+++ b/src/main/resources/templates/topo.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-    <title>Bootstrap Simple Registration Form</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <style>
+<html xmlns:th="http://www.thymeleaf.org"
+      th:replace="fragments/base :: base(~{::title},~{::h2},~{::section})">
+<div th:replace="fragments/base :: head"></div>
+<title>New Topo</title>
 
-    </style> -->
-    <title>New Topo</title>
-</head>
 <body>
 <div th:replace="fragments/menu :: header"></div>
-<form action="#" th:action="@{/topo}" th:object="${Topo}"
-      method="POST">
-    <div class="text-center">
-        <p>Add a new Topo!</p>
-        <p>Topo Title:           <input type="text" name="title"/></p>
-        <p>Topo Author:         <input type="text" name="author"></p>
-        <p>Topo Date Of Publishing:    <input type="date" name="dateOfPublishing"/></p>
+<br>
+<h2>New Topo</h2>
+
+<section>
+    <form action="#" th:action="@{'/spot/{id}/add/topo' (id=${spot.id})} " th:object="${Topo}"
+          method="POST">
+        <div class="text-center">
+            <p>Add a new Topo!</p>
+            <p>Topo Title: <input type="text" name="title"/></p>
+            <p>Topo Author: <input type="text" name="author"></p>
+            <p>Topo Date Of Publishing: <input type="date" name="dateOfPublishing"/></p>
 
 
-        <p><input type="submit" value="Save"/></p>
+            <p><input type="submit" value="Save"/></p>
 
-    </div>
-</form>
-<div class="text-center">Already have an account? <a href="#">Log In</a></div>
-<footer th:fragment="footer">
-    C'est mon pied!
-</footer>
+        </div>
+    </form>
+    <div class="text-center">Already have an account? <a href="#">Log In</a></div>
+</section>
 </body>
 </html>
