--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" >
-    <title>User List Spring Boot web application - Thymeleaf</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      th:replace="fragments/base :: base(~{::title},~{::h2},~{::section})">
+<div th:replace="fragments/base :: head"></div>
+<title>User List Spring Boot web application - Thymeleaf</title>
+
 <body>
 <div th:replace="fragments/menu :: header"></div>
-<h1 align="center">My user list</h1>
-<br/>
-<table border="1" cellpadding="10">
-    <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Pseudo</th>
-        <th>Password</th>
-    </tr>
+<br>
+<h2 align="center">My user list</h2>
 
-    <tr th:each="user: ${users}">
-        <td th:text="${user.name}">Name</td>
-        <td th:text="${user.email}">Email</td>
-        <td th:text="${user.pseudo}">Pseudo</td>
-        <td th:text="${user.password}">Password</td>
-    </tr>
-</table>
-<footer th:fragment="footer">
-    C'est mon pied!
-</footer>
+<section>
+    <table border="1" cellpadding="10">
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Pseudo</th>
+            <th>Password</th>
+        </tr>
+
+        <tr th:each="user: ${users}">
+            <td th:text="${user.name}">Name</td>
+            <td th:text="${user.email}">Email</td>
+            <td th:text="${user.pseudo}">Pseudo</td>
+            <td th:text="${user.password}">Password</td>
+        </tr>
+    </table>
+</section>
 </body>
 </html>
