--- a/src/main/resources/templates/topo.html
+++ b/src/main/resources/templates/topo.html
@@ -23,7 +23,7 @@
 
         </div>
     </form>
-    <div class="text-center">Already have an account? <a href="#">Log In</a></div>
+    <div class="text-center">Already have an account? <a href="@{/login}">Log In</a></div>
 </section>
 </body>
 </html>
