Modifications fragment menu, Ajout "numberOfRoutes" dans Domain.Area

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,6 +19,8 @@
                 <!-- <button class="unmask" type="button" title="Mask/Unmask password to check content">Unmask</button>-->
             </p>
             <br/>
+            <!--<tr th:if="${#lists.size(topoList) != 0}"-->
+            <p th:text="${error}">error_message</p>
             <input type="submit" value="Log In"/>
         </form>
     </div>
