--- a/src/main/resources/templates/topo.html
+++ b/src/main/resources/templates/topo.html
@@ -16,7 +16,7 @@
             <p>Add a new Topo!</p>
             <p>Topo Title: <input type="text" name="title"/></p>
             <p>Topo Author: <input type="text" name="author"></p>
-            <p>Topo Date Of Publishing: <input type="date" name="dateOfPublishing"/></p>
+            <p>Topo Publication Date: <input type="date" name="publicationDate"/></p>
 
 
             <p><input type="submit" value="Save"/></p>
