--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       th:replace="fragments/base :: base(~{::title},~{::h2},~{::section})">
@@ -27,4 +28,4 @@
     </table>
 </section>
 </body>
-</html>
+</html>-->
